added serve script

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "scripts": {
     "test": "mocha --check-leaks --require esm './**/*.test.js'",
     "start": "./bin/server",
-    "dev": "node-dev bin/server --port 3000"
+    "dev": "node-dev bin/server --port 3000",
+    "serve": "sudo node -r esm ./bin/server --port 1234"
   }
 }
